# Honeybee

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  unittest.py
dependencies/: build_depencies.sh  build_dependencies.sh
honey_analyzer/: ha_debug_switch.h  honey_analyzer.h  main.c
honey_analyzer/capture/: ha_capture_session.c  ha_capture_session.h
honey_analyzer/processor_trace/: ha_pt_decoder.c  ha_pt_decoder.h  ha_pt_decoder_constants.h
honey_analyzer/trace_analysis/: ha_mirror_block_decode_thunks.asm  ha_mirror_utils.c  ha_mirror_utils.h  ha_session.c  ha_session.h  ha_session_internal.h  trace_utils.asm
honey_analyzer/unit_testing/: ha_session_audit.c  ha_session_audit.h
honey_capture/: main.c
honey_coverage/: hc_tree_set.c  hc_tree_set.h  main.c
honey_driver/: .gitignore  Makefile  honey_driver.c  honey_driver_constants.h
honey_hive_generator/: main.c
honey_hive_generator/disassembly/: elf.h  hh_disassembly.c  hh_disassembly.h
honey_hive_generator/hive_generation/: hh_hive_generator.c  hh_hive_generator.h
honey_mirror/: main.c
honey_mirror/code_generation/: hm_code_generator.c  hm_code_generator.h
honey_mirror/disassembly/: hm_disassembly.c  hm_disassembly.h
honey_tester/: main.c
honey_tester/unit_testing/: ha_session_audit.c  ha_session_audit.h
honeybee_shared/: hb_driver_packets.h  hb_hive.c  hb_hive.h
paper/: process_traces.py
rust-honey_analyzer/: Cargo.toml
rust-honey_analyzer-sys/: Cargo.toml  build.rs  wrapper.h
rust-honey_analyzer/src/: analysis_session.rs  capture_filter.rs  capture_session.rs  hive.rs  lib.rs  pt_decoder_status.rs
rust-honey_analyzer/src/example_coverage_info/: block_btreeset.rs  block_hashset.rs  edge_btreeset.rs  edge_hashset.rs  fulltrace_32bit.rs  fulltrace_64bit.rs  less_trivial_dedup_fulltrace_32bit.rs  mod.rs  trivial_dedup_fulltrace_32bit.rs  trivial_dedup_fulltrace_64bit.rs  xordiff_compressed_trace_uleb128.rs
